src/objects/zzDateModifiedLookup__c.object
<CustomObject>
    <fields>
        <fullName>lastDateModified__c</fullName>
        <label>lastDateModified</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>objectAPIName__c</fullName>
        <label>objectAPIName</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>objectPrefix__c</fullName>
        <label>objectPrefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>zzDateModifiedLookup</label>
    <nameField>
        <label>DateModifiedLookup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>zzDateModifiedLookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>